<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:padding="10dp"
            android:id="@+id/email_input"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:padding="10dp"/>


    <Button android:layout_width="200dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:text="@string/done"
            android:id="@+id/done_btn"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/you_hav_logged_in_successfully"
            android:id="@+id/success_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>